allprojects {
	apply plugin: 'java'
	group = 'p0nki.glmc4'
	version = '1.0'

	repositories {
		jcenter()
		mavenCentral()
		maven { url 'https://jitpack.io' }
	}

	dependencies {
		compileJava {
			implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
			implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
			implementation group: 'org.joml', name: 'joml', version: '1.9.24'
			implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
			implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.3'
			implementation group: 'com.google.guava', name: 'guava', version: '29.0-jre'
		}
	}

	sourceCompatibility = '11'
	targetCompatibility = '11'

	sourceSets.main.resources.srcDirs += "../src/main/resources"

}